--- a/chargebackcalculator/src/app.css
+++ b/chargebackcalculator/src/app.css
@@ -1,3 +1,22 @@
 body {
   box-sizing: border-box;
 }
+
+.hkBg {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(135deg, #86bbd8, #33658a);
+  background: #fff;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("./assets/cc.jpeg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
