--- a/chargebackcalculator/src/components/css/lavi.css
+++ b/chargebackcalculator/src/components/css/lavi.css
@@ -1,4 +1,4 @@
-.dropdownC {
+/* .dropdownC {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
   background-color: #f9f9f9;
@@ -11,8 +11,8 @@
   align-items: center;
   margin-top: 50px;
   margin-left: 150px;
-}
-.reg {
+} */
+/* .reg {
   margin-top: 80px;
   margin-left: 150px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -32,18 +32,18 @@
   color: #000000;
   text-align: center;
   margin: 40px 0px 20px 0px;
-}
-.container-fluid {
+} */
+/* .container-fluid {
   width: 100%;
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-image: url("./assets/cc.jpeg"); */
+  background-image: url("./assets/cc.jpeg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
-}
+  background-size: cover; */
+/* }
 .app-wrapper {
   background-color: #fff;
   min-width: 650px;
@@ -52,4 +52,4 @@
   box-sizing: border-box;
   border-radius: 5px;
   font-family: sans-serif;
-}
+} */
